crates/keron-lang/tests/corpus/errors/check/fn_val_fn_name_collision.keron
val foo: Int = 1

fn foo(): Int {
  2
}
